+ junit/log4j(not using not) | Also some corrections  with file locker